Fix topbar becoming too wide when window is small
The topbar would increase in height and look off
when the window size is changed, so I set the
grid rows for the container for the first row
to auto so that the size would not change when the
window does.

--- a/styles.css
+++ b/styles.css
@@ -78,7 +78,7 @@ ul {
 .container {
     display: grid;
     grid-template-columns: minmax(215px, 1fr) 4fr;
-    grid-template-rows: 1fr 5fr;
+    grid-template-rows: auto 1fr;
 }
 
 
